# FLIF

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  FLIF-CLA-template.txt  LICENSE  Makefile  README.md  SPEC.md  TODO  common.cpp  common.h  common.hpp  config.h  configure.py  fileio.h  fileio.hpp  flif-dec.cpp  flif-dec.h  flif-enc.cpp  flif-enc.h  flif-enc.hpp  flif-interface-private.h  flif-interface.cpp  flif.1  flif.cpp  flif.h  flif.osx  flif_config.h  io.cpp  io.h  io.hpp  make_vs.bat  raw2flif  raw2rggb  viewflif.c
anim_benchmark/: do_benchmarks
benchmark/: README  do_benchmarks  plot-template.gnu  plot_benchmarks  produce_table  results.csv
benchmark/input/kodak/: source
debian/: changelog  control  copyright  flif.bash-completion  rules
doc/: flif.1  flif.magic  metadata  produce_documentation
getopt/: getopt.c  getopt.h  getopt_long.c
image/: color_range.cpp  color_range.h  color_range.hpp  crc32k.c  crc32k.cpp  crc32k.h  image-pam.cpp  image-pam.h  image-png.cpp  image-png.h  image-pnm.cpp  image-pnm.h  image-pnm.hpp  image-rggb.cpp  image-rggb.h  image-rggb.hpp  image.cpp  image.h  image.hpp
maniac/: chance.cpp  chance.h  chance.hpp  compound.h  compound.hpp  rac.h  rac.hpp  symbol.cpp  symbol.h  symbol.hpp  util.c  util.cpp  util.h  util.hpp
raw-tools/: raw2flif  raw2rggb  raw2rggb.bat
raw-tools/sony_arw/: README  arw_compress.sh  arw_decompress.sh  arw_encode.c  dcraw.c
src/: CMakeLists.txt  Makefile  common.cpp  common.hpp  compiler-specific.hpp  config.h  fileio.hpp  flif-dec.cpp  flif-dec.hpp  flif-enc.cpp  flif-enc.hpp  flif-interface-private.h  flif-interface.cpp  flif-mime.xml  flif-pixbuf-loader.c  flif.cpp  flif.h  flif_config.h  io.cpp  io.hpp  precompile.h  viewflif.c
src/image/: color_range.cpp  color_range.hpp  crc32k.cpp  crc32k.hpp  image-metadata.cpp  image-metadata.hpp  image-pam.cpp  image-pam.hpp  image-png-metadata.hpp  image-png.cpp  image-png.hpp  image-pnm.cpp  image-rggb.cpp  image-rggb.hpp  image.cpp  image.hpp
src/maniac/: bit.cpp  bit.hpp  chance.cpp  chance.hpp  compound.hpp  compound_enc.hpp  rac.hpp  rac_enc.hpp  symbol.cpp  symbol.hpp  symbol_enc.hpp  util.hpp
src/transform/: bounds.hpp  colorbuckets.hpp  factory.cpp  factory.hpp  framecombine.hpp  framedup.hpp  frameshape.hpp  palette.hpp  palette_A.hpp  palette_C.hpp  permute.hpp  transform.hpp  yc1c2.hpp  ycocg.hpp  yiq.hpp
tools/: apng2flif  build-libpng.sh  gif2flif  sizes.sh  test-lossy.sh  test-metadata.sh  test-roundtrip.sh  test-roundtrip_anim.sh  test-roundtrip_anim_framedir.sh  test.c  viewer.c
tools/bouncing_ball_frames/: a.flif
transform/: bounds.h  bounds.hpp  colorbuckets.h  colorbuckets.hpp  factory.cpp  factory.h  framecombine.h  framecombine.hpp  framedup.h  frameshape.h  frameshape.hpp  palette.h  palette.hpp  palette_A.h  palette_A.hpp  palette_C.hpp  transform.h  yiq.h  yiq.hpp
